Add docs and implementations
Multi-line description of commit, feel free to be detailed. Wrap the
body at 72 characters.

[Ticket: X]

--- a/docs/config/jsdoc.config.json
+++ b/docs/config/jsdoc.config.json
@@ -1,6 +1,6 @@
 {
   "source": {
-    "include": ["./"]
+    "include": ["./lib", "./edit-file.js"]
   },
   "opts": {
     "destination": "./docs",
