--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "01-node-ecosystem",
-  "version": "0.0.1",
-  "description": "this will be sooooo cool",
+  "name": "file-reader",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
   "scripts": {
-    "lint": "eslint **/*.js",
+    "lint": "eslint **/.js",
     "test": "jest --coverage --verbose",
-    "watch": "jest --coverage --verbose --watch",
+    "test-watch": "jest --watchAll --coverage --verbose",
     "jsdoc": "jsdoc -c ./docs/config/jsdoc.config.json"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "eslint": "^5.6.1",
+    "jest": "^23.6.0"
+  },
   "devDependencies": {
-    "eslint": "^5.15.3",
-    "faker": "^4.1.0",
-    "jest": "^24.5.0",
-    "jsdocs": "^1.0.0"
+    "jsdoc": "^3.5.5"
   }
 }
